--- a/Week-4/felxbox.css
+++ b/Week-4/felxbox.css
@@ -1,11 +1,34 @@
-#ana {
+body {
   display: flex;
+  flex-direction: row;
+}
+.soltaraf {
+  width: 38%;
+  height: 900px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.sagtaraf {
+  width: 38%;
+  height: 900px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#orta {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
   width: 400px;
   height: 730px;
-  flex-direction: column;
-  margin: auto;
-  border: solid;
-  border-color: rgb(87, 80, 80);
+
+  border: solid 1px gray;
+}
+p,
+i {
+  color: grey;
 }
 .ilk {
   width: 400px;
@@ -106,8 +129,52 @@ div i {
 .footer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   font-size: 25px;
   margin: 10px;
   color: gray;
+}
+.bal1 {
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  background-color: blue;
+  display: flex;
+  margin-left: 150px;
+  margin-top: 20px;
+  opacity: 0.3;
+  overflow: hidden;
+}
+.bal2 {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background-color: blue;
+  overflow: hidden;
+  display: flex;
+  margin-left: -80px;
+  margin-bottom: 250px;
+  opacity: 0.3;
+}
+.bal3 {
+  display: flex;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: blue;
+  overflow: hidden;
+  margin-left: 160px;
+  margin-top: -25px;
+  opacity: 0.3;
+}
+.bal4 {
+  display: flex;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background-color: blue;
+  overflow: hidden;
+  margin-left: 280px;
+  margin-bottom: -150px;
+  opacity: 0.3;
 }
