footer hasbeen added but it should been designed.

--- a/Week-5/facebook.css
+++ b/Week-5/facebook.css
@@ -5,7 +5,7 @@
   margin: 0;
 }
 body {
-  background-color: rgb(187, 187, 214);
+  background-color: #f0f2f5;
   display: flex;
   flex-direction: column;
 }
@@ -40,7 +40,7 @@ h1 + p {
   width: 400px;
   height: 400px;
   margin-top: 50px;
-  background-color: whitesmoke;
+  background-color: #ffffff;
   border-radius: 10px;
 }
 .righttop {
@@ -83,6 +83,7 @@ input:active {
   margin-top: 20px;
   border-style: solid;
   border-color: gray white white white;
+  background-color: #ffffff;
 }
 .altparagraf p {
   padding: 15px;
@@ -98,6 +99,35 @@ input:active {
   height: 200px;
   display: flex;
   flex-direction: column;
-  border: solid 1px red;
   margin-top: 100px;
+  justify-content: center;
+}
+h1,
+p {
+  font-family: Arial, Helvetica, sans-serif;
+}
+.footermid,
+.footerbottom,
+.footertop {
+  margin-left: 130px;
+  margin-top: 30px;
+  color: #b8b9bb;
+}
+.footertop {
+  width: 80%;
+  height: 50%;
+  border-bottom: solid 1px #b8b9bb;
+  text-align: justify;
+}
+.footermid > p {
+  word-spacing: 25px;
+  line-height: 26px;
+}
+.footermid {
+  width: 80%;
+  height: 30%;
+}
+.footerbottom {
+  width: 80%;
+  height: 20%;
 }
