--- a/Week-5/facebook.css
+++ b/Week-5/facebook.css
@@ -8,6 +8,7 @@ body {
   background-color: #f0f2f5;
   display: flex;
   flex-direction: column;
+  font-family: sans-serif;
 }
 #main-container {
   display: flex;
@@ -42,6 +43,7 @@ h1 + p {
   margin-top: 50px;
   background-color: #ffffff;
   border-radius: 10px;
+  box-shadow: rgba(50, 83, 231, 0.35) 0px 5px 15px;
 }
 .righttop {
   align-items: center;
@@ -65,7 +67,9 @@ input:nth-child(3) {
 }
 input:active {
   border: rgb(2, 2, 29);
-  box-shadow: blue 5px 5px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .button > input {
   width: 170px;
@@ -104,7 +108,7 @@ input:active {
 }
 h1,
 p {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
 }
 .footermid,
 .footerbottom,
@@ -130,4 +134,14 @@ p {
 .footerbottom {
   width: 80%;
   height: 20%;
+  font-family: sans-serif;
+}
+.arabic {
+  font-family: "Almarai script=arabic rev=1";
+}
+.footertop > p > span {
+  font-size: 20px;
+  padding: 0.3px 6px;
+  background-color: #ced0d4;
+  color: black;
 }
