--- a/Week-5/facebook.css
+++ b/Week-5/facebook.css
@@ -1,3 +1,4 @@
+/* Genel css kodları */
 * {
   text-decoration: none;
   list-style: none;
@@ -10,6 +11,8 @@ body {
   flex-direction: column;
   font-family: sans-serif;
 }
+
+/* sayfanın üst kısmı ile ilgili css kodları */
 #main-container {
   display: flex;
   margin-top: 50px;
@@ -98,6 +101,8 @@ input:active {
 .span {
   font-weight: bold;
 }
+
+/* Sayfanın alt kısmı ile ilgili css kodları */
 #footer {
   width: 100%;
   height: 200px;
@@ -140,8 +145,10 @@ p {
   font-family: "Almarai script=arabic rev=1";
 }
 .footertop > p > span {
-  font-size: 20px;
-  padding: 0.3px 6px;
+  font-size: 22px;
+  margin-left: 12px;
+  padding: 0.3px 5px;
+  border-radius: 5px;
   background-color: #ced0d4;
   color: black;
 }
