--- a/Week-5/facebook.css
+++ b/Week-5/facebook.css
@@ -110,6 +110,7 @@ input:active {
   flex-direction: column;
   margin-top: 100px;
   justify-content: center;
+  background-color: white;
 }
 h1,
 p {
