footer has been added

--- a/Week-6/create-template.css
+++ b/Week-6/create-template.css
@@ -264,3 +264,33 @@ main {
 .bottom {
   margin-top: 1rem;
 }
+
+/*Moderizasyon ile cok karıstırdıgım icin footerı eski usul dizayn ediyorum*/
+.footer1 {
+  width: 800px;
+  height: 40px;
+  margin-left: 1.5rem;
+  margin-top: 2rem;
+  border: solid 2px white;
+  display: flex;
+  flex-direction: row-reverse;
+}
+footer {
+  display: flex;
+}
+.footer1 div {
+  width: 30%;
+  height: 40px;
+  background-color: white;
+}
+.footer2 {
+  width: 400px;
+  height: 40px;
+  margin-left: 2rem;
+}
+i {
+  font-size: 40px;
+  margin-left: 2rem;
+  color: white;
+  margin-top: 3rem;
+}
