--- a/Week-6/create-template.css
+++ b/Week-6/create-template.css
@@ -1,4 +1,4 @@
-/* General style */
+/* Ge/* General style */
 
 * {
   margin: 0px;
@@ -48,7 +48,7 @@ header {
   border-top: 25px solid transparent;
   border-left: 50px solid white;
   border-bottom: 25px solid transparent;
-
+  background-color: #80b3ec;
   margin-left: 15px;
 }
 .header-mid > div {
@@ -110,18 +110,22 @@ main {
 .main-midd-triangle1 {
   width: 0;
   height: 0;
-  border-left: 25px solid transparent;
-  border-right: 25px solid transparent;
-  border-bottom: 50px solid #80b3ec;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  border-bottom: 30px solid #80b3ec;
   margin-right: -5px;
+  margin-top: 1.3rem;
   size: 3rem;
+  size: 3rem;
+  background-color: white;
 }
 .main-midd-triangle2 {
   width: 0;
   height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid #80b3ec;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 50px solid #80b3ec;
+  background-color: white;
 }
 .main-right {
   width: 25rem;
@@ -160,9 +164,9 @@ main {
 }
 .top-blue div {
   width: 2rem;
-  height: 1.9rem;
+  height: 2rem;
   border-radius: 50%;
-  margin-left: 1.99rem;
+  margin-left: 2rem;
   background-color: #80b3ec;
 }
 
@@ -239,8 +243,14 @@ main {
   margin-top: 4rem;
   margin-left: 3rem;
 }
+.circles {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /*Color*/
+
 .header-left,
 .header-mid,
 .header-right > div,
@@ -259,7 +269,7 @@ main {
 .top-triangele,
 .handy-top,
 .handy-mid {
-  background-color: #6cacf4;
+  background-color: #80b3ec;
 }
 .bottom {
   margin-top: 1rem;
@@ -295,4 +305,14 @@ i {
   margin-left: 2rem;
   color: white;
   margin-top: 3rem;
+}
+.circles > div {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: #80b3ec;
+  margin: 0.4rem;
+}
+.circles {
+  background-color: white;
 }
